@@ -19,7 +19,6 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.util.Arrays;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.jdt.annotation.NonNull;
 import org.openhab.core.util.HexUtils;
 import org.slf4j.Logger;
@@ -182,11 +181,8 @@ public class OnkyoAlbumArt {
         try {
             URL url = new URL(albumArtUrl);
             URLConnection connection = url.openConnection();
-            InputStream inputStream = connection.getInputStream();
-            try {
-                return IOUtils.toByteArray(inputStream);
-            } finally {
-                IOUtils.closeQuietly(inputStream);
+            try (InputStream inputStream = connection.getInputStream()) {
+                return inputStream.readAllBytes();
             }
         } catch (MalformedURLException e) {
             logger.warn("Album Art download failed from url '{}', reason {}", albumArtUrl, e.getMessage());
