@@ -20,7 +20,14 @@ import java.math.RoundingMode;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
@@ -31,7 +38,6 @@ import javax.measure.Unit;
 import javax.measure.quantity.Dimensionless;
 import javax.measure.quantity.Temperature;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
@@ -41,14 +47,16 @@ import org.eclipse.jetty.client.util.DigestAuthentication;
 import org.eclipse.jetty.http.HttpMethod;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.openhab.binding.venstarthermostat.internal.VenstarThermostatConfiguration;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarInfoData;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarResponse;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarSensor;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarSensorData;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarSystemMode;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarSystemModeSerializer;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarSystemState;
-import org.openhab.binding.venstarthermostat.internal.model.VenstarSystemStateSerializer;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarAwayMode;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarAwayModeSerializer;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarInfoData;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarResponse;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarSensor;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarSensorData;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarSystemMode;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarSystemModeSerializer;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarSystemState;
+import org.openhab.binding.venstarthermostat.internal.dto.VenstarSystemStateSerializer;
 import org.openhab.core.config.core.status.ConfigStatusMessage;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.QuantityType;
@@ -78,6 +86,7 @@ import com.google.gson.JsonSyntaxException;
  *
  * @author William Welliver - Initial contribution
  * @author Dan Cunningham - Migration to Jetty, annotations and various improvements
+ * @author Matthew Davies - added code to include away mode in binding
  */
 @NonNullByDefault
 public class VenstarThermostatHandler extends ConfigStatusThingHandler {
@@ -100,31 +109,31 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
 
     public VenstarThermostatHandler(Thing thing) {
         super(thing);
-        httpClient = new HttpClient(new SslContextFactory(true));
+        httpClient = new HttpClient(new SslContextFactory.Client(true));
         gson = new GsonBuilder().registerTypeAdapter(VenstarSystemState.class, new VenstarSystemStateSerializer())
-                .registerTypeAdapter(VenstarSystemMode.class, new VenstarSystemModeSerializer()).create();
+                .registerTypeAdapter(VenstarSystemMode.class, new VenstarSystemModeSerializer())
+                .registerTypeAdapter(VenstarAwayMode.class, new VenstarAwayModeSerializer()).create();
 
         log.trace("VenstarThermostatHandler for thing {}", getThing().getUID());
     }
 
-    @SuppressWarnings("null") // compiler does not see conf.refresh == null check
     @Override
     public Collection<ConfigStatusMessage> getConfigStatus() {
         Collection<ConfigStatusMessage> status = new ArrayList<>();
         VenstarThermostatConfiguration config = getConfigAs(VenstarThermostatConfiguration.class);
-        if (StringUtils.isBlank(config.username)) {
+        if (config.username.isBlank()) {
             log.warn("username is empty");
             status.add(ConfigStatusMessage.Builder.error(CONFIG_USERNAME).withMessageKeySuffix(EMPTY_INVALID)
                     .withArguments(CONFIG_USERNAME).build());
         }
 
-        if (StringUtils.isBlank(config.password)) {
+        if (config.password.isBlank()) {
             log.warn("password is empty");
             status.add(ConfigStatusMessage.Builder.error(CONFIG_PASSWORD).withMessageKeySuffix(EMPTY_INVALID)
                     .withArguments(CONFIG_PASSWORD).build());
         }
 
-        if (config.refresh == null || config.refresh < 10) {
+        if (config.refresh < 10) {
             log.warn("refresh is too small: {}", config.refresh);
 
             status.add(ConfigStatusMessage.Builder.error(CONFIG_REFRESH).withMessageKeySuffix(REFRESH_INVALID)
@@ -135,7 +144,6 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
 
     @Override
     public void handleCommand(ChannelUID channelUID, Command command) {
-
         if (getThing().getStatus() != ThingStatus.ONLINE) {
             log.debug("Controller is NOT ONLINE and is not responding to commands");
             return;
@@ -150,12 +158,12 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
             stateMap.remove(channelUID.getAsString());
             if (channelUID.getId().equals(CHANNEL_HEATING_SETPOINT)) {
                 QuantityType<Temperature> quantity = commandToQuantityType(command, unitSystem);
-                int value = quantityToRoundedTemperature(quantity, unitSystem).intValue();
+                double value = quantityToRoundedTemperature(quantity, unitSystem).doubleValue();
                 log.debug("Setting heating setpoint to {}", value);
                 setHeatingSetpoint(value);
             } else if (channelUID.getId().equals(CHANNEL_COOLING_SETPOINT)) {
                 QuantityType<Temperature> quantity = commandToQuantityType(command, unitSystem);
-                int value = quantityToRoundedTemperature(quantity, unitSystem).intValue();
+                double value = quantityToRoundedTemperature(quantity, unitSystem).doubleValue();
                 log.debug("Setting cooling setpoint to {}", value);
                 setCoolingSetpoint(value);
             } else if (channelUID.getId().equals(CHANNEL_SYSTEM_MODE)) {
@@ -167,7 +175,17 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
                 }
                 log.debug("Setting system mode to  {}", value);
                 setSystemMode(value);
-                updateIfChanged(CHANNEL_SYSTEM_MODE_RAW, new StringType("" + value));
+                updateIfChanged(CHANNEL_SYSTEM_MODE_RAW, new StringType(value.toString()));
+            } else if (channelUID.getId().equals(CHANNEL_AWAY_MODE)) {
+                VenstarAwayMode value;
+                if (command instanceof StringType) {
+                    value = VenstarAwayMode.valueOf(((StringType) command).toString().toUpperCase());
+                } else {
+                    value = VenstarAwayMode.fromInt(((DecimalType) command).intValue());
+                }
+                log.debug("Setting away mode to  {}", value);
+                setAwayMode(value);
+                updateIfChanged(CHANNEL_AWAY_MODE_RAW, new StringType(value.toString()));
             }
             startUpdatesTask(UPDATE_AFTER_COMMAND_SECONDS);
         }
@@ -278,22 +296,26 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
         return UnDefType.UNDEF;
     }
 
-    private void setCoolingSetpoint(int cool) {
-        int heat = getHeatingSetpoint().intValue();
+    private void setCoolingSetpoint(double cool) {
+        double heat = getHeatingSetpoint().doubleValue();
         VenstarSystemMode mode = getSystemMode();
-        updateThermostat(heat, cool, mode);
+        updateControls(heat, cool, mode);
     }
 
     private void setSystemMode(VenstarSystemMode mode) {
-        int cool = getCoolingSetpoint().intValue();
-        int heat = getHeatingSetpoint().intValue();
-        updateThermostat(heat, cool, mode);
+        double cool = getCoolingSetpoint().doubleValue();
+        double heat = getHeatingSetpoint().doubleValue();
+        updateControls(heat, cool, mode);
     }
 
-    private void setHeatingSetpoint(int heat) {
-        int cool = getCoolingSetpoint().intValue();
+    private void setHeatingSetpoint(double heat) {
+        double cool = getCoolingSetpoint().doubleValue();
         VenstarSystemMode mode = getSystemMode();
-        updateThermostat(heat, cool, mode);
+        updateControls(heat, cool, mode);
+    }
+
+    private void setAwayMode(VenstarAwayMode away) {
+        updateSettings(away);
     }
 
     private QuantityType<Temperature> getCoolingSetpoint() {
@@ -312,26 +334,63 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
         return infoData.getMode();
     }
 
-    private void updateThermostat(int heat, int cool, VenstarSystemMode mode) {
+    private VenstarAwayMode getAwayMode() {
+        return infoData.getAway();
+    }
+
+    private void updateSettings(VenstarAwayMode away) {
+        // this function corresponds to the thermostat local API POST /settings instruction
+        // the function can be expanded with other parameters which are changed via POST /settings
         Map<String, String> params = new HashMap<>();
-        log.debug("Updating thermostat {}  heat:{} cool {} mode: {}", getThing().getLabel(), heat, cool, mode);
+        params.put("away", String.valueOf(away.mode()));
+        VenstarResponse res = updateThermostat("/settings", params);
+        if (res != null) {
+            log.debug("Updated thermostat");
+            // update our local copy until the next refresh occurs
+            infoData.setAwayMode(away);
+            // add other parameters here in the same way
+        }
+    }
+
+    private void updateControls(double heat, double cool, VenstarSystemMode mode) {
+        // this function corresponds to the thermostat local API POST /control instruction
+        // the function can be expanded with other parameters which are changed via POST /control
+        Map<String, String> params = new HashMap<>();
         if (heat > 0) {
             params.put("heattemp", String.valueOf(heat));
         }
         if (cool > 0) {
             params.put("cooltemp", String.valueOf(cool));
         }
-        params.put("mode", "" + mode.mode());
+        params.put("mode", String.valueOf(mode.mode()));
+        VenstarResponse res = updateThermostat("/control", params);
+        if (res != null) {
+            log.debug("Updated thermostat");
+            // update our local copy until the next refresh occurs
+            infoData.setCooltemp(cool);
+            infoData.setHeattemp(heat);
+            infoData.setMode(mode);
+            // add other parameters here in the same way
+        }
+    }
+
+    /**
+     * Function to send data to the thermostat and update the Thing state if there is an error
+     *
+     * @param path
+     * @param params
+     * @return VenstarResponse object or null if there was an error
+     */
+    private @Nullable VenstarResponse updateThermostat(String path, Map<String, String> params) {
         try {
-            String result = postData("/control", params);
+            String result = postData(path, params);
             VenstarResponse res = gson.fromJson(result, VenstarResponse.class);
-            if (res.isSuccess()) {
-                log.debug("Updated thermostat");
-                // update our local copy until the next refresh occurs
-                infoData = new VenstarInfoData(cool, heat, infoData.getState(), mode);
+            if (res != null && res.isSuccess()) {
+                return res;
             } else {
-                log.debug("Failed to update thermostat: {}", res.getReason());
-                goOffline(ThingStatusDetail.COMMUNICATION_ERROR, "Thermostat update failed: " + res.getReason());
+                String reason = res == null ? "invalid response" : res.getReason();
+                log.debug("Failed to update thermostat: {}", reason);
+                goOffline(ThingStatusDetail.COMMUNICATION_ERROR, reason);
             }
         } catch (VenstarCommunicationException | JsonSyntaxException e) {
             log.debug("Unable to fetch info data", e);
@@ -340,6 +399,7 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
         } catch (VenstarAuthenticationException e) {
             goOffline(ThingStatusDetail.CONFIGURATION_ERROR, "Authorization Failed");
         }
+        return null;
     }
 
     private void updateData() {
@@ -367,6 +427,8 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
             updateIfChanged(CHANNEL_SYSTEM_MODE, new StringType(getSystemMode().modeName()));
             updateIfChanged(CHANNEL_SYSTEM_STATE_RAW, new DecimalType(getSystemState().state()));
             updateIfChanged(CHANNEL_SYSTEM_MODE_RAW, new DecimalType(getSystemMode().mode()));
+            updateIfChanged(CHANNEL_AWAY_MODE, new StringType(getAwayMode().modeName()));
+            updateIfChanged(CHANNEL_AWAY_MODE_RAW, new DecimalType(getAwayMode().mode()));
 
             goOnline();
         } catch (VenstarCommunicationException | JsonSyntaxException e) {
@@ -432,14 +494,13 @@ public class VenstarThermostatHandler extends ConfigStatusThingHandler {
 
             if (response.getStatus() != 200) {
                 throw new VenstarCommunicationException(
-                        "Error communitcating with thermostat. Error Code: " + response.getStatus());
+                        "Error communicating with thermostat. Error Code: " + response.getStatus());
             }
             String content = response.getContentAsString();
             log.trace("sendRequest: response {}", content);
             return content;
         } catch (InterruptedException | TimeoutException | ExecutionException e) {
             throw new VenstarCommunicationException(e);
-
         }
     }
 
